--- a/source/_posts/有机会去实现或优化（一）.md
+++ b/source/_posts/有机会去实现或优化（一）.md
@@ -1,12 +1,14 @@
 ---
-title: duu
+title: 有机会去实现
 date: 2018-03-21 23:06:45
-tags: [duu, javascript]
+tags: [有机会去实现]
 ---
 
 实习中实现的一种配置式的后台管理系统的开发方案，
 在此做个回忆，梳理和记录，
 有机会再整理，重写并优化。
+
+2021年更新。现在有较为完善的一套方案。
 
 <!-- more -->
 
